// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginContent /> component should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="content flex relative bg-base justify-around overflow-visible pa4 center contentInitialScreen items-baseline"
  >
    <div
      enter="[object Object]"
      from="[object Object]"
      keys="children"
      leave="[object Object]"
    />
    <div
      class="contentForm dn ph4 pb6"
    >
      <div
        enter="[object Object]"
        from="[object Object]"
        keys=""
        leave="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<LoginContent /> component should match snapshot when loading 1`] = `
<DocumentFragment>
  <div
    class="content flex relative bg-base justify-around overflow-visible pa4 center contentInitialScreen items-baseline"
  >
    <div
      enter="[object Object]"
      from="[object Object]"
      keys=""
      leave="[object Object]"
    />
    <div
      class="contentForm dn ph4 pb6"
    >
      <div
        enter="[object Object]"
        from="[object Object]"
        keys=""
        leave="[object Object]"
      />
    </div>
  </div>
</DocumentFragment>
`;
